# pcc

cpp/prvni test/: CMakeLists.txt
cpp/prvni test/src/lib/include/: math.h
i3/: CMakeLists.txt
i3/binaries/: CMakeLists.txt  main.cpp
i3/src/: CMakeLists.txt
i3/src/Point/: CMakeLists.txt
i3/src/Point/include/: Point.h
i3/src/Vector/: CMakeLists.txt
i3/src/Vector/include/: Vector.h
i3/src/abstract/: AbstractEuclidianPoint.h  AbstractVector.h
i3/src/interface/: PointAddable.h  Scalarable.h  Subtractable.h  VectorAddable.h
projekt/src/adder/: CMakeLIsts.txt  adder.cpp
projekt/src/adder/include/: adder.h
prvni test/: CMakeLists.txt
prvni test/src/math/: CMakeLists.txt  math.cpp
prvni test/src/math/include/: math.h
untitled/: CMakeLists.txt
untitled/src/: CMakeLists.txt
untitled/src/Vector/: CMakeLists.txt  Vector.cpp
untitled/src/Vector/include/: Vector.h
untitled/src/math/: CMakeLists.txt  math.cpp
untitled/src/math/include/: math.h
untitled1/: main.cpp
untitled2/: CMakeLists.txt  main.cpp
untitled3/: CMakeLists.txt
untitled3/lib/: CMakeLists.txt
untitled3/lib/abstract/: AbstractComplex.h
untitled3/lib/complex/: CMakeLists.txt  complex.cpp
untitled3/lib/complex/include/: complex.h
untitled3/lib/interface/: ComplexMulti.h  Invert.h
untitled3/test/: CMakeLists.txt  test.cpp
utery2811/: CMakeLists.txt  zaloha.cpp
utery2811/src/Vector/include/: Vector.h
utery2811/src/abstract/: AbstractVector.h
utery2811/src/interface/: Addable.h
utery7_11/: CMakeLists.txt
